apps/templates/k0s/k0s-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: k0s-router
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`k0s.attias.io`)
      kind: Rule
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: 80
      priority: 10
      middlewares:
        - name: inject-admin-token
          namespace: kubernetes-dashboard
    #     - name: authentik
    #       namespace: traefik
    # - kind: Rule
    #   match: "Host(`k0s.attias.io`) && PathPrefix(`/outpost.goauthentik.io/`)"
    #   priority: 15
    #   services:
    #       - kind: Service
    #         name: ak-outpost-authentik-embedded-outpost
    #         namespace: authentik
    #         port: 9000
  tls:
    certResolver: le
